Add initial group page. Implementing selection of raws by checkbox and by click on the row. Add standard icons for edit and delete.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -19,7 +19,7 @@
 	"ipTrNet": "IP im Transportnetz",
 	"ipVPN": "Verbindungs-IP (VPN)",
 	"locality": "Address",
-	"name": "Institutename",
+	"name": "Name",
 	"network": "Intranet",
 	"serverNetwork": "Servernetz",
 	"nmTrNet": "Netzwerkmaske",
