--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -25,7 +25,7 @@
 	"nmTrNet": "Netzwerkmaske",
 	"type": "Institute art",
 	"deleted": " ",
-	"recDate": "Registrierungscode",
+	"recDate": "Erstell am:",
 	"validity": "Gültigkeit",
 	"ayTemplate": "Autoyasttemplate",
 	"customerId": "",
