--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,9 +18,9 @@
 	"ipProxy": "Proxy IP",
 	"ipTrNet": "IP im Transportnetz",
 	"ipVPN": "Verbindungs-IP (VPN)",
-	"locality": "Address",
+	"locality": "Adresse",
 	"name": "Name",
-	"network": "Intranet",
+	"network": "Netzwerk",
 	"serverNetwork": "Servernetz",
 	"nmTrNet": "Netzwerkmaske",
 	"type": "Institute art",
@@ -41,5 +41,26 @@
 	"fsQuota": "Dateisystemquota",
 	"msQuotaUsed": "Mailsystembenutzung",
 	"fsQuotaUsed": "Dateisystembenutztung",
-	"mailAliases": "E-Mail-Aliases"
+	"mailAliases": "E-Mail-Aliases",
+	"user": "Benutzer",
+	"group": "Gruppe",
+	"institute": "Institut",
+	"room": "Raum",
+	"device": "Gerät",
+	"Add institute": "Institut anlegen",
+	"Add user": "Benutzer anlegen",
+	"Add group": "Gruppe anlegen",
+	"Add room": "Raum anlegen",
+	"Add device": "Gerät anlegen",
+	"Edit institute": "Institut bearbeiten",
+	"Edit user": "Benutzer bearbeiten",
+	"Edit group": "Gruppe bearbeiten",
+	"Edit room": "Raum bearbeiten",
+	"Edit device": "Gerät bearbeiten",
+	"cancel": "verwerfen",
+	"apply": "anwenden",
+	"sysadmins": "Systemadministratoren",
+	"teachers": "Lehrer",
+	"students": "Schüler",
+	"administration": "Verwaltung"
 }
