Implementing device details. Fix edit page. Remove <div> around the ionic-col. Enhance translations Fix login page.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,86 +1,124 @@
 {
-	"username": "Benutzername",
-	"password": "Passwort",
-	"prop": "",
-	"uid": "Benutzername (Login)",
-	"uuid": "Kennung (UUID)",
-	"adminPW": "Administratorpasswort",
-	"anonDhcpNetwork": "ANON_DHCP Netzwerk",
-	"cephalixPW": "Cephalixpasswort",
-	"domain": "DNS-Domain",
-	"firstRoom": "Erster Raum",
-	"gwTrNet": "Standardroute in Transportnetz",
-	"ipAdmin": "Haupt-IP-Adresse",
-	"ipBackup": "IP des Backups ",
-	"ipGateway": "Standardroute im Intranet",
-	"ipMail": "Mailserver IP",
-	"ipPrint": "Printserver IP",
-	"ipProxy": "Proxy IP",
-	"ipTrNet": "IP im Transportnetz",
-	"ipVPN": "Verbindungs-IP (VPN)",
-	"locality": "Adresse",
-	"name": "Name",
-	"network": "Netzwerk",
-	"serverNetwork": "Servernetz",
-	"nmTrNet": "Netzwerkmaske",
-	"type": "Institute art",
-	"deleted": " ",
-	"recDate": "Erstell am:",
-	"validity": "Gültigkeit",
-	"ayTemplate": "Autoyasttemplate",
-	"customerId": "",
-	"regCode": "Registrierungscode",
-	"edit": "bearbeiten",
-	"delete": "löschen",
-	"users": "Benutzer",
-	"birthDay": "Geburtstag",
-	"role": "Rolle",
-	"givenName": "Vorname",
-	"surName": "Nachname",
-	"msQuota": "Mailsystemquota",
-	"fsQuota": "Dateisystemquota",
-	"msQuotaUsed": "Mailsystembenutzung",
-	"fsQuotaUsed": "Dateisystembenutztung",
-	"mailAliases": "E-Mail-Aliases",
-	"user": "Benutzer",
-	"group": "Gruppe",
-	"institute": "Institut",
-	"room": "Raum",
-	"device": "Gerät",
-	"Add institute": "Institut anlegen",
-	"Add user": "Benutzer anlegen",
-	"Add group": "Gruppe anlegen",
-	"Add room": "Raum anlegen",
-	"Add device": "Gerät anlegen",
-	"Edit institute": "Institut bearbeiten",
-	"Edit user": "Benutzer bearbeiten",
-	"Edit group": "Gruppe bearbeiten",
-	"Edit room": "Raum bearbeiten",
-	"Edit device": "Gerät bearbeiten",
-	"cancel": "verwerfen",
-	"apply": "anwenden",
-	"sysadmins": "Systemadministratoren",
-	"teachers": "Lehrer",
-	"students": "Schüler",
-	"administration": "Verwaltung",
-	"description": "Beschreibung",
-	"groupType": "Art der Gruppe",
-	"roomControl": "Kontrolle im Raum",
-	"roomType": "Art des Raumes",
-	"ip": "IP-Adresse",
-	"mac": "MAC-Adresse",
-	"wlanIp": "WLAN-IP-Adresse",
-	"wlanMac": "WLAN-MAC-Adresse",
-	"telephone": "Telefonnummer",
-	"category": "Kategorie",
-	"id": "Technisches ID",
-	"address1": "Adresse",
-	"address2": "Adressenzusatz",
-	"contact": "Kontaktperson",
-	"country": "Land",
-	"name2": "Namenzusatz",
-	"state": "Bundesland",
-	"Select columns to show": "Sichbare Felder wählen."
-
-
+    "Add device": "Gerät anlegen",
+    "Add group": "Gruppe anlegen",
+    "Add institute": "Institut anlegen",
+    "Add notice": "Notiz zufügen",
+    "Add room": "Raum anlegen",
+    "Add user": "Benutzer anlegen",
+    "Confirm":  "bestätigen",
+    "Confirm!":  "Bestätigen!",
+    "Customers": "Kunden",
+    "Devices": "Geräte",
+    "Do you realy want to logout?":"Wollen Sie sich wirklich abmelden?",
+    "Edit customer": "Kunden bearbeiten",
+    "Edit device": "Gerät bearbeiten",
+    "Edit group": "Gruppe bearbeiten",
+    "Edit institute": "Institut bearbeiten",
+    "Edit room": "Raum bearbeiten",
+    "Edit user": "Benutzer bearbeiten",
+    "Groups": "Gruppen",
+    "HWConfs": "Hardwarekonfiugrationen",
+    "Institutes": "Institute",
+    "Modify members of selected group:": "Bearbeiten der Gruppenmitglieder :",
+    "Modify selected user:": "Benutzer bearbeiten:",
+    "Rooms": "Räume",
+    "Select columns to show": "Sichbare Felder wählen.",
+    "Users": "Benutzer",
+    "access": "Zugang",
+    "address1": "Adresse",
+    "address2": "Adressenzusatz",
+    "adminPW": "Administratorpasswort",
+    "administration": "Verwaltung",
+    "anonDhcpNetwork": "ANON_DHCP Netzwerk",
+    "apply": "anwenden",
+    "available members": "Nicht Mitglieder der Gruppe",
+    "ayTemplate": "Autoyasttemplate",
+    "birthDay": "Geburtstag",
+    "cancel": "verwerfen",
+    "category": "Kategorie",
+    "cephalixPW": "Cephalixpasswort",
+    "cephalixCustomerId": "Kunde",
+    "class": "Klasse",
+    "classes": "Klassen",
+    "contact": "Kontaktperson",
+    "country": "Land",
+    "created": "erstellt",
+    "customerId": "",
+    "delete": "löschen",
+    "deleted": " ",
+    "description": "Beschreibung",
+    "device": "Gerät",
+    "domain": "DNS-Domain",
+    "edit": "bearbeiten",
+    "firstRoom": "Erster Raum",
+    "fsQuota": "Dateisystemquota",
+    "fsQuotaUsed": "Dateisystembenutztung",
+    "givenName": "Vorname",
+    "global":"Gesamtschule",
+    "group": "Gruppe",
+    "groupType": "Art der Gruppe",
+    "gwTrNet": "Standardroute in Transportnetz",
+    "gymnasium":"Gymnaisum",
+    "id": "Technisches ID",
+    "institute": "Institut",
+    "instituteType": "Art des Instituts",
+    "instituteStatus": "Vertragsstatus",
+    "invoiced": "abgerechnet",
+    "ip": "IP-Adresse",
+    "ipAdmin": "Haupt-IP-Adresse",
+    "ipBackup": "IP des Backups ",
+    "ipGateway": "Standardroute im Intranet",
+    "ipMail": "Mailserver IP",
+    "ipPrint": "Printserver IP",
+    "ipProxy": "Proxy IP",
+    "ipTrNet": "IP im Transportnetz",
+    "ipVPN": "Verbindungs-IP (VPN)",
+    "locality": "Ort/Adresse",
+    "mac": "MAC-Adresse",
+    "mailAliases": "E-Mail-Aliases",
+    "members of the group": "Gruppenmitglieder",
+    "msQuota": "Mailsystemquota",
+    "msQuotaUsed": "Mailsystembenutzung",
+    "name": "Name",
+    "name2": "Namenzusatz",
+    "network": "Netzwerk",
+    "nmTrNet": "Netzwerkmaske",
+    "noticeType": "Art",
+    "other":"Andere Institution",
+    "password": "Passwort",
+    "postalCode": "PLZ",
+    "primary": "Primäre Gruppe (Rolle)",
+    "prop": "",
+    "real":"Realschule",
+    "recDate": "Erstell am:",
+    "regCode": "Registrierungscode",
+    "reminder": "Erinerung",
+    "role": "Rolle",
+    "room": "Raum",
+    "roomControl": "Kontrolle im Raum",
+    "roomType": "Art des Raumes",
+    "search": "suchen",
+    "secondary":"Mittel/Hauptschule",
+    "secondary_school":"Sekundarschule",
+    "serverNetwork": "Servernetz",
+    "state": "Bundesland",
+    "students": "Schüler",
+    "surName": "Nachname",
+    "sysadmins": "Systemadministratoren",
+    "teachers": "Lehrer",
+    "telephone": "Telefonnummer",
+    "text": "Text",
+    "title": "Titel",
+    "type": "Art",
+    "uid": "Benutzername (Login)",
+    "user": "Benutzer",
+    "username": "Benutzername",
+    "users": "Benutzer",
+    "uuid": "Kennung (UUID)",
+    "validity": "Gültigkeit",
+    "wlanIp": "WLAN-IP-Adresse",
+    "wlanMac": "WLAN-MAC-Adresse",
+    "wokr":"Berufschule",
+    "workTime": "Erfasste Arbeitszeit in Minuten",
+    "workgroup": "Arbeitsgruppe"
 }
