Use ag-theme-balham for all tables. Fix member tables col sizes. Fix parameters canLoad function.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -32,7 +32,7 @@
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "apply": "anwenden",
     "available members": "Nicht Mitglieder der Gruppe",
-    "ayTemplate": "Autoyasttemplate",
+    "ayTemplate": "Autoyastvorlage",
     "birthDay": "Geburtstag",
     "cancel": "verwerfen",
     "category": "Kategorie",
