Reorganize details pages. User row with class header-raw for showing actual selected object.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -92,7 +92,7 @@
     "real":"Realschule",
     "recDate": "Erstell am:",
     "regCode": "Registrierungscode",
-    "reminder": "Erinerung",
+    "reminder": "Erinnerung",
     "role": "Rolle",
     "room": "Raum",
     "roomControl": "Kontrolle im Raum",
