Integrating ag-grid-enterprise. Implementing hwconf details. Move ion-card-header into ion-raw class = header-raw in the details pages.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -17,12 +17,14 @@
     "Edit room": "Raum bearbeiten",
     "Edit user": "Benutzer bearbeiten",
     "Groups": "Gruppen",
-    "HWConfs": "Hardwarekonfiugrationen",
+    "HWConfs": "Rechnerkonfigurationen",
     "Institutes": "Institute",
+    "Members of the selected hwconf:": "Geräte in der Rechnerkonfiguration:",
     "Modify members of selected group:": "Bearbeiten der Gruppenmitglieder :",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Rooms": "Räume",
     "Select columns to show": "Sichbare Felder wählen.",
+    "Start clone members of selected hwconf:": "Klonen starten für die Rechnerkonfiguration:",
     "Users": "Benutzer",
     "access": "Zugang",
     "address1": "Adresse",
@@ -59,6 +61,8 @@
     "groupType": "Art der Gruppe",
     "gwTrNet": "Standardroute in Transportnetz",
     "gymnasium":"Gymnaisum",
+    "hwconf": "Rechnerkonfiguration",
+    "hwconfId": "Rechnerkonfiguration",
     "id": "Technisches ID",
     "institute": "Institut",
     "instituteType": "Art des Instituts",
@@ -95,6 +99,7 @@
     "reminder": "Erinnerung",
     "role": "Rolle",
     "room": "Raum",
+    "roomId": "Raum",
     "roomControl": "Kontrolle im Raum",
     "roomType": "Art des Raumes",
     "search": "suchen",
