Make license save! Enhance translations.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,6 +5,7 @@
     "Add notice": "Notiz zufügen",
     "Add room": "Raum anlegen",
     "Add user": "Benutzer anlegen",
+    "Available groups":"Weitere Gruppen",
     "Confirm":  "bestätigen",
     "Confirm!":  "Bestätigen!",
     "Customers": "Kunden",
@@ -20,6 +21,7 @@
     "HWConfs": "Rechnerkonfigurationen",
     "Institutes": "Institute",
     "Members of the selected hwconf:": "Geräte in der Rechnerkonfiguration:",
+    "Member of groups": "Mitglied der Gruppen:",
     "Modify members of selected group:": "Bearbeiten der Gruppenmitglieder :",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Rooms": "Räume",
