--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,7 +5,8 @@
     "Add notice": "Notiz zufügen",
     "Add room": "Raum anlegen",
     "Add user": "Benutzer anlegen",
-    "Available groups":"Weitere Gruppen",
+    "Available groups:":"Weitere Gruppen",
+    "Available members:": "Weitere Benutzer",
     "Confirm":  "bestätigen",
     "Confirm!":  "Bestätigen!",
     "Customers": "Kunden",
@@ -21,8 +22,9 @@
     "HWConfs": "Rechnerkonfigurationen",
     "Institutes": "Institute",
     "Members of the selected hwconf:": "Geräte in der Rechnerkonfiguration:",
-    "Member of groups": "Mitglied der Gruppen:",
-    "Modify members of selected group:": "Bearbeiten der Gruppenmitglieder :",
+    "Member of groups:": "Mitglied der Gruppen:",
+    "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
+    "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Rooms": "Räume",
     "Select columns to show": "Sichbare Felder wählen.",
