Implementing status overwiev of institutes. Fix layout of editing an object. Enhance translation. Make tool bar smaller.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,6 +7,7 @@
     "Add user": "Benutzer anlegen",
     "Available groups:":"Weitere Gruppen",
     "Available members:": "Weitere Benutzer",
+    "Cancel": "verwerfen",
     "Confirm":  "bestätigen",
     "Confirm!":  "Bestätigen!",
     "Customers": "Kunden",
@@ -15,12 +16,20 @@
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
     "Edit group": "Gruppe bearbeiten",
+    "Edit hwconf": "Gerätekonfiguration bearbeiten",
     "Edit institute": "Institut bearbeiten",
     "Edit room": "Raum bearbeiten",
     "Edit user": "Benutzer bearbeiten",
     "Groups": "Gruppen",
     "HWConfs": "Rechnerkonfigurationen",
     "Institutes": "Institute",
+    "Manage customer": "Kunden verwalten",
+    "Manage devices": "Geärte verwalten",
+    "Manage groups": "Gruooen verwalten",
+    "Manage hwconfs": "Gerätekonfigurationen verwalten",
+    "Manage institutes": "Instituten verwalten",
+    "Manage rooms": "Räume verwalten",
+    "Manage users": "Benutzer verwalten",
     "Members of the selected hwconf:": "Geräte in der Rechnerkonfiguration:",
     "Member of groups:": "Mitglied der Gruppen:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
@@ -127,7 +136,7 @@
     "validity": "Gültigkeit",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
-    "wokr":"Berufschule",
+    "work":"Berufschule",
     "workTime": "Erfasste Arbeitszeit in Minuten",
     "workgroup": "Arbeitsgruppe"
 }
