Implementing user import and institutes sync

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -12,6 +12,7 @@
     "Confirm!":  "Bestätigen!",
     "Customers": "Kunden",
     "Devices": "Geräte",
+    "Device": "Gerät",
     "Do you realy want to logout?":"Wollen Sie sich wirklich abmelden?",
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
@@ -21,7 +22,9 @@
     "Edit room": "Raum bearbeiten",
     "Edit user": "Benutzer bearbeiten",
     "Groups": "Gruppen",
+    "Group": "Gruppe",
     "HWConfs": "Rechnerkonfigurationen",
+    "HWConf": "Rechnerkonfiguration",
     "Institutes": "Institute",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
@@ -35,9 +38,11 @@
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
+    "Room": "Raum",
     "Rooms": "Räume",
     "Select columns to show": "Sichbare Felder wählen.",
     "Start clone members of selected hwconf:": "Klonen starten für die Rechnerkonfiguration:",
+    "User": "Benutzer",
     "Users": "Benutzer",
     "access": "Zugang",
     "address1": "Adresse",
