--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -28,7 +28,7 @@
     "Institutes": "Institute",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
-    "Manage groups": "Gruooen verwalten",
+    "Manage groups": "Gruppen verwalten",
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
     "Manage institutes": "Instituten verwalten",
     "Manage rooms": "Räume verwalten",
