Fix a lot of error for real build

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -67,6 +67,7 @@
     "delete": "löschen",
     "deleted": " ",
     "description": "Beschreibung",
+    "devCount": "Anzahl der Geräte",
     "device": "Gerät",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
@@ -108,6 +109,8 @@
     "noticeType": "Art",
     "other":"Andere Institution",
     "password": "Passwort",
+    "place": "Platz",
+    "places": "Plätze",
     "postalCode": "PLZ",
     "primary": "Primäre Gruppe (Rolle)",
     "prop": "",
@@ -120,6 +123,8 @@
     "roomId": "Raum",
     "roomControl": "Kontrolle im Raum",
     "roomType": "Art des Raumes",
+    "row": "Reihe",
+    "rows": "Reihen",
     "search": "suchen",
     "secondary":"Mittel/Hauptschule",
     "secondary_school":"Sekundarschule",
