--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -23,8 +23,8 @@
     "Edit user": "Benutzer bearbeiten",
     "Groups": "Gruppen",
     "Group": "Gruppe",
-    "HWConfs": "Rechnerkonfigurationen",
-    "HWConf": "Rechnerkonfiguration",
+    "HWConfs": "Gerätekonfigurationen",
+    "HWConf": "Gerätekonfiguration",
     "Institutes": "Institute",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
@@ -33,7 +33,7 @@
     "Manage institutes": "Instituten verwalten",
     "Manage rooms": "Räume verwalten",
     "Manage users": "Benutzer verwalten",
-    "Members of the selected hwconf:": "Geräte in der Rechnerkonfiguration:",
+    "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Member of groups:": "Mitglied der Gruppen:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
     "Modify selected institute:": "Institut bearbeiten:",
@@ -41,7 +41,7 @@
     "Room": "Raum",
     "Rooms": "Räume",
     "Select columns to show": "Sichbare Felder wählen.",
-    "Start clone members of selected hwconf:": "Klonen starten für die Rechnerkonfiguration:",
+    "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "User": "Benutzer",
     "Users": "Benutzer",
     "access": "Zugang",
@@ -80,8 +80,8 @@
     "groupType": "Art der Gruppe",
     "gwTrNet": "Standardroute in Transportnetz",
     "gymnasium":"Gymnaisum",
-    "hwconf": "Rechnerkonfiguration",
-    "hwconfId": "Rechnerkonfiguration",
+    "hwconf": "Gerätekonfiguration",
+    "hwconfId": "Gerätekonfiguration",
     "id": "Technisches ID",
     "institute": "Institut",
     "instituteType": "Art des Instituts",
