--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -11,8 +11,11 @@
     "Confirm":  "bestätigen",
     "Confirm!":  "Bestätigen!",
     "Customers": "Kunden",
+    "Create a new installation set": "Neues Installationsset erstellen",
+    "Create a new software package.": "Softwarepaket erstellen",
     "Devices": "Geräte",
     "Device": "Gerät",
+    "Download software packages.": "Softwarepakete herunterladen.",
     "Do you realy want to logout?":"Wollen Sie sich wirklich abmelden?",
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
@@ -25,6 +28,8 @@
     "Group": "Gruppe",
     "HWConfs": "Gerätekonfigurationen",
     "HWConf": "Gerätekonfiguration",
+    "Installation sets": "Installationssets",
+    "Installation status": "Status der Installationen",
     "Institutes": "Institute",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
@@ -32,18 +37,24 @@
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
     "Manage institutes": "Instituten verwalten",
     "Manage rooms": "Räume verwalten",
+    "Manage software installation sets:": "Installationssets verwalten",
     "Manage users": "Benutzer verwalten",
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Member of groups:": "Mitglied der Gruppen:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
+    "Packages": "Pakete",
+    "Package": "Paket",
+    "Refresh package list.": "Paketliste aktualisieren.",
     "Room": "Raum",
     "Rooms": "Räume",
     "Select columns to show": "Sichbare Felder wählen.",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "User": "Benutzer",
     "Users": "Benutzer",
+    "Write state files for the devices.": "Statefiles für die Geräte erstellen",
+    "Apply state for all running devices.": "Status auf alle laufende Geräte anwenden.",
     "access": "Zugang",
     "address1": "Adresse",
     "address2": "Adressenzusatz",
@@ -120,6 +131,7 @@
     "reminder": "Erinnerung",
     "role": "Rolle",
     "room": "Raum",
+    "rooms": "Räume",
     "roomId": "Raum",
     "roomControl": "Kontrolle im Raum",
     "roomType": "Art des Raumes",
@@ -129,6 +141,8 @@
     "secondary":"Mittel/Hauptschule",
     "secondary_school":"Sekundarschule",
     "serverNetwork": "Servernetz",
+    "software": "Software",
+    "status": "Status",
     "state": "Bundesland",
     "students": "Schüler",
     "surName": "Nachname",
@@ -144,6 +158,7 @@
     "users": "Benutzer",
     "uuid": "Kennung (UUID)",
     "validity": "Gültigkeit",
+    "version": "Version",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
     "work":"Berufschule",
