--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,14 +5,24 @@
     "Add notice": "Notiz zufügen",
     "Add room": "Raum anlegen",
     "Add user": "Benutzer anlegen",
+    "Add userImport": "Benutzerimport starten",
+    "All Institutes":"Alle Instituten",
+    "All users":"Alle Benutzer",
+    "Apply actions on the selected objects":"Aktionen an den ausgewählten Objekten ausführen.",
     "Available groups:":"Weitere Gruppen",
     "Available members:": "Weitere Benutzer",
     "Cancel": "verwerfen",
     "Confirm":  "bestätigen",
     "Confirm!":  "Bestätigen!",
     "Customers": "Kunden",
+    "Create a new customer.": "Neue Kunde anlegen",
+    "Create a new institute.": "Neues Institut erstellen",
     "Create a new installation set": "Neues Installationsset erstellen",
     "Create a new software package.": "Softwarepaket erstellen",
+    "Create a new group.": "Neue Gruppe erstellen",
+    "Create a new user.": "Neuen Benutzer erstellen",
+    "Create a new room.": "Neuen Raum erstellen",
+    "Create a new device.": "Neues Gerät erstellen",
     "Devices": "Geräte",
     "Device": "Gerät",
     "Download software packages.": "Softwarepakete herunterladen.",
@@ -28,9 +38,12 @@
     "Group": "Gruppe",
     "HWConfs": "Gerätekonfigurationen",
     "HWConf": "Gerätekonfiguration",
+    "Import users":"Benutzerimporte",
+    "importFile": "Importdatei wählen",
     "Installation sets": "Installationssets",
     "Installation status": "Status der Installationen",
     "Institutes": "Institute",
+    "List of old Imports":"Alte Imports",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
     "Manage groups": "Gruppen verwalten",
@@ -39,6 +52,7 @@
     "Manage rooms": "Räume verwalten",
     "Manage software installation sets:": "Installationssets verwalten",
     "Manage users": "Benutzer verwalten",
+    "Manage user imports": "Benutzerimporte verwalten",
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Member of groups:": "Mitglied der Gruppen:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
@@ -46,10 +60,11 @@
     "Modify selected user:": "Benutzer bearbeiten:",
     "Packages": "Pakete",
     "Package": "Paket",
+    "Please select at last one object!":"Bitte mindestens ein Objekt markieren!",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Room": "Raum",
     "Rooms": "Räume",
-    "Select columns to show": "Sichbare Felder wählen.",
+    "Select the columns to show": "Sichbare Felder auswählen.",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
     "User": "Benutzer",
     "Users": "Benutzer",
@@ -60,10 +75,12 @@
     "address2": "Adressenzusatz",
     "adminPW": "Administratorpasswort",
     "administration": "Verwaltung",
+    "allClasses":"Importdatei enthält alle Klassen. Andere werden gelöscht.",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "apply": "anwenden",
     "available members": "Nicht Mitglieder der Gruppe",
-    "ayTemplate": "Autoyastvorlage",
+    "appendBirthdayToPassword":"Geburtsdatum an Passwort anhängen.",
+    "ayTemplate": "Installationsvorlage",
     "birthDay": "Geburtstag",
     "cancel": "verwerfen",
     "category": "Kategorie",
@@ -71,6 +88,7 @@
     "cephalixCustomerId": "Kunde",
     "class": "Klasse",
     "classes": "Klassen",
+    "cleanClassDirs":"Klassenverzeichnisse leeren",
     "contact": "Kontaktperson",
     "country": "Land",
     "created": "erstellt",
@@ -80,14 +98,17 @@
     "description": "Beschreibung",
     "devCount": "Anzahl der Geräte",
     "device": "Gerät",
+    "devices": "Geräte",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
     "firstRoom": "Erster Raum",
+    "full":"Importdatei enthält alle Benutzer.",
     "fsQuota": "Dateisystemquota",
     "fsQuotaUsed": "Dateisystembenutztung",
     "givenName": "Vorname",
     "global":"Gesamtschule",
     "group": "Gruppe",
+    "groups": "Gruppen",
     "groupType": "Art der Gruppe",
     "gwTrNet": "Standardroute in Transportnetz",
     "gymnasium":"Gymnaisum",
@@ -107,10 +128,13 @@
     "ipProxy": "Proxy IP",
     "ipTrNet": "IP im Transportnetz",
     "ipVPN": "Verbindungs-IP (VPN)",
+    "lang": "Sprache",
     "locality": "Ort/Adresse",
+    "login":"Anmelden",
     "mac": "MAC-Adresse",
     "mailAliases": "E-Mail-Aliases",
     "members of the group": "Gruppenmitglieder",
+    "mustChange":"Passwort bei erster Anmeldung ändern",
     "msQuota": "Mailsystemquota",
     "msQuotaUsed": "Mailsystembenutzung",
     "name": "Name",
@@ -129,6 +153,7 @@
     "recDate": "Erstell am:",
     "regCode": "Registrierungscode",
     "reminder": "Erinnerung",
+    "resetPassword": "Passwörte für alte Benutzer auch setzten.",
     "role": "Rolle",
     "room": "Raum",
     "rooms": "Räume",
@@ -141,6 +166,7 @@
     "secondary":"Mittel/Hauptschule",
     "secondary_school":"Sekundarschule",
     "serverNetwork": "Servernetz",
+    "softwares": "Software",
     "software": "Software",
     "status": "Status",
     "state": "Bundesland",
@@ -149,6 +175,7 @@
     "sysadmins": "Systemadministratoren",
     "teachers": "Lehrer",
     "telephone": "Telefonnummer",
+    "test": "Al test ausführen",
     "text": "Text",
     "title": "Titel",
     "type": "Art",
