Unify styles. Enhance translation.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,10 @@
 {
+    "Apply chnages.":"Änderungen anwenden.",
+    "Set the next default values":"Nächste Standardwerte eintragen.",
+    "Write configuration and create installation image.":"Konfiugration schreiben und Installationsmedium erstellen.",
+    "Download the installation image":"Installationsmedium herunterladen.",
+    "Download the setup script.":"Setupscript herunterladen",
+    "Delete institute.":"Institute löschen",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
     "Add institute": "Institut anlegen",
@@ -6,6 +12,7 @@
     "Add room": "Raum anlegen",
     "Add user": "Benutzer anlegen",
     "Add userImport": "Benutzerimport starten",
+    "Add support":"Supportanfrage stellen",
     "All Institutes":"Alle Instituten",
     "All users":"Alle Benutzer",
     "Apply actions on the selected objects":"Aktionen an den ausgewählten Objekten ausführen.",
@@ -34,6 +41,7 @@
     "Edit institute": "Institut bearbeiten",
     "Edit room": "Raum bearbeiten",
     "Edit user": "Benutzer bearbeiten",
+    "Edit user preferences": "Benutzereinstellungen bearbeiten",
     "Groups": "Gruppen",
     "Group": "Gruppe",
     "HWConfs": "Gerätekonfigurationen",
@@ -55,9 +63,11 @@
     "Manage user imports": "Benutzerimporte verwalten",
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
     "Member of groups:": "Mitglied der Gruppen:",
+    "Members of the group:": "Mitglieder der Gruppe:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
+    "Modify selecter group:":"Gruppe bearbeiten",
     "Packages": "Pakete",
     "Package": "Paket",
     "Please select at last one object!":"Bitte mindestens ein Objekt markieren!",
@@ -66,6 +76,9 @@
     "Rooms": "Räume",
     "Select the columns to show": "Sichbare Felder auswählen.",
     "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
+    "Update the server.":"Server aktualisieren.",
+    "Restart the server.":"Server neu starten.",
+    "Shut down the server.": "Server herunterfahren",
     "User": "Benutzer",
     "Users": "Benutzer",
     "Write state files for the devices.": "Statefiles für die Geräte erstellen",
@@ -101,12 +114,14 @@
     "devices": "Geräte",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
+    "email":"Emailadresse",
     "firstRoom": "Erster Raum",
+    "firstname":"Vorname",
     "full":"Importdatei enthält alle Benutzer.",
     "fsQuota": "Dateisystemquota",
     "fsQuotaUsed": "Dateisystembenutztung",
     "givenName": "Vorname",
-    "global":"Gesamtschule",
+    "globalSchool":"Gesamtschule",
     "group": "Gruppe",
     "groups": "Gruppen",
     "groupType": "Art der Gruppe",
@@ -119,6 +134,7 @@
     "instituteType": "Art des Instituts",
     "instituteStatus": "Vertragsstatus",
     "invoiced": "abgerechnet",
+    "internalNetwork":"Internes Netzwerk",
     "ip": "IP-Adresse",
     "ipAdmin": "Haupt-IP-Adresse",
     "ipBackup": "IP des Backups ",
@@ -129,6 +145,7 @@
     "ipTrNet": "IP im Transportnetz",
     "ipVPN": "Verbindungs-IP (VPN)",
     "lang": "Sprache",
+    "lastname":"Nachname",
     "locality": "Ort/Adresse",
     "login":"Anmelden",
     "mac": "MAC-Adresse",
@@ -140,7 +157,7 @@
     "name": "Name",
     "name2": "Namenzusatz",
     "network": "Netzwerk",
-    "nmTrNet": "Netzwerkmaske",
+    "nmTrNet": "Netzwerkmaske im Transportnetz",
     "noticeType": "Art",
     "other":"Andere Institution",
     "password": "Passwort",
@@ -148,8 +165,9 @@
     "places": "Plätze",
     "postalCode": "PLZ",
     "primary": "Primäre Gruppe (Rolle)",
+    "primarySchool":"Grundschule",
     "prop": "",
-    "real":"Realschule",
+    "realSchool":"Realschule",
     "recDate": "Erstell am:",
     "regCode": "Registrierungscode",
     "reminder": "Erinnerung",
@@ -163,11 +181,13 @@
     "row": "Reihe",
     "rows": "Reihen",
     "search": "suchen",
-    "secondary":"Mittel/Hauptschule",
+    "secondarySchool":"Mittel/Hauptschule",
     "secondary_school":"Sekundarschule",
     "serverNetwork": "Servernetz",
     "softwares": "Software",
     "software": "Software",
+    "special":"Sonderschule",
+    "subject":"Betreff",
     "status": "Status",
     "state": "Bundesland",
     "students": "Schüler",
@@ -188,7 +208,7 @@
     "version": "Version",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
-    "work":"Berufschule",
+    "workSchool":"Berufschule",
     "workTime": "Erfasste Arbeitszeit in Minuten",
     "workgroup": "Arbeitsgruppe"
 }
