--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,8 @@
 {
+    "Base configuration":"Grundkofigartion",
+    "Settings":"Einstellungen",
+    "Backup":"Backup",
+    "System configuration":"Systemeinstellungen",
     "Apply chnages.":"Änderungen anwenden.",
     "Set the next default values":"Nächste Standardwerte eintragen.",
     "Write configuration and create installation image.":"Konfiugration schreiben und Installationsmedium erstellen.",
@@ -7,6 +11,7 @@
     "Delete institute.":"Institute löschen",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
+    "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institut anlegen",
     "Add notice": "Notiz zufügen",
     "Add room": "Raum anlegen",
@@ -83,6 +88,7 @@
     "Users": "Benutzer",
     "Write state files for the devices.": "Statefiles für die Geräte erstellen",
     "Apply state for all running devices.": "Status auf alle laufende Geräte anwenden.",
+    "This field is required!":"Dieses Feld muss ausgeüllt werden!",
     "access": "Zugang",
     "address1": "Adresse",
     "address2": "Adressenzusatz",
@@ -112,6 +118,7 @@
     "devCount": "Anzahl der Geräte",
     "device": "Gerät",
     "devices": "Geräte",
+    "deviceType": "Gerättyp",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
     "email":"Emailadresse",
