Implementing add and modify installation sets as modal. Itlooks good but does not work at the moment.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -134,6 +134,7 @@
     "groupType": "Art der Gruppe",
     "gwTrNet": "Standardroute in Transportnetz",
     "gymnasium":"Gymnaisum",
+    "hwconfs": "Gerätekonfigurationen",
     "hwconf": "Gerätekonfiguration",
     "hwconfId": "Gerätekonfiguration",
     "id": "Technisches ID",
