Improve creating support request.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,9 @@
 {
+    "supporttype": "Art der Supportanfrage",
+    "Error": "Fehlerbericht",
+    "FeatureRequest":"Featureanfrage",
+    "Feedback":"Rückmeldung (Lob)",
+    "ProductOrder":"Bestellung",
     "Base configuration":"Grundkofigartion",
     "Settings":"Einstellungen",
     "Backup":"Backup",
