Unify table sizes. Enhance translations. Make member/group table header readable Correct matTooltip

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,49 +1,43 @@
 {
-    "supporttype": "Art der Supportanfrage",
-    "Error": "Fehlerbericht",
-    "FeatureRequest":"Featureanfrage",
-    "Feedback":"Rückmeldung (Lob)",
-    "ProductOrder":"Bestellung",
-    "Base configuration":"Grundkofigartion",
-    "Settings":"Einstellungen",
-    "Backup":"Backup",
-    "System configuration":"Systemeinstellungen",
-    "Apply chnages.":"Änderungen anwenden.",
-    "Set the next default values":"Nächste Standardwerte eintragen.",
-    "Write configuration and create installation image.":"Konfiugration schreiben und Installationsmedium erstellen.",
-    "Download the installation image":"Installationsmedium herunterladen.",
-    "Download the setup script.":"Setupscript herunterladen",
-    "Delete institute.":"Institute löschen",
     "Add device": "Gerät anlegen",
     "Add group": "Gruppe anlegen",
     "Add hwconf": "Gerätekonfiguration anlegen",
     "Add institute": "Institut anlegen",
     "Add notice": "Notiz zufügen",
+    "Add remove user to/from the selected groups.":"Benutzer aus den markierten Gruppen entfernen bzw. hinzufügen.",
     "Add room": "Raum anlegen",
+    "Add support": "Supportanfrage stellen",
     "Add user": "Benutzer anlegen",
     "Add userImport": "Benutzerimport starten",
-    "Add support":"Supportanfrage stellen",
-    "All Institutes":"Alle Instituten",
-    "All users":"Alle Benutzer",
-    "Apply actions on the selected objects":"Aktionen an den ausgewählten Objekten ausführen.",
-    "Available groups:":"Weitere Gruppen",
-    "Available members:": "Weitere Benutzer",
+    "All Institutes": "Alle Instituten",
+    "All users": "Alle Benutzer",
+    "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
+    "Apply chnages.": "Änderungen anwenden.",
+    "Apply state for all running devices.": "Status auf alle laufende Geräte anwenden.",
+    "Available groups:": "Weitere Gruppen:",
+    "Available members:": "Weitere Benutzer:",
+    "Backup": "Backup",
+    "Base configuration": "Grundkofigartion",
     "Cancel": "verwerfen",
-    "Confirm":  "bestätigen",
-    "Confirm!":  "Bestätigen!",
-    "Customers": "Kunden",
+    "Confirm": "bestätigen",
+    "Confirm!": "Bestätigen!",
     "Create a new customer.": "Neue Kunde anlegen",
-    "Create a new institute.": "Neues Institut erstellen",
-    "Create a new installation set": "Neues Installationsset erstellen",
-    "Create a new software package.": "Softwarepaket erstellen",
-    "Create a new group.": "Neue Gruppe erstellen",
-    "Create a new user.": "Neuen Benutzer erstellen",
-    "Create a new room.": "Neuen Raum erstellen",
     "Create a new device.": "Neues Gerät erstellen",
-    "Devices": "Geräte",
+    "Create a new printer.": "Neuen Drucker erstellen",
+    "Create a new group.": "Neue Gruppe erstellen",
+    "Create a new installation set": "Neues Installationsset erstellen",
+    "Create a new institute.": "Neues Institut erstellen",
+    "Create a new room.": "Neuen Raum erstellen",
+    "Create a new software package.": "Softwarepaket erstellen",
+    "Create a new user.": "Neuen Benutzer erstellen",
+    "Customers": "Kunden",
+    "Delete institute.": "Institute löschen",
     "Device": "Gerät",
+    "Devices": "Geräte",
+    "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
     "Download software packages.": "Softwarepakete herunterladen.",
-    "Do you realy want to logout?":"Wollen Sie sich wirklich abmelden?",
+    "Download the installation image": "Installationsmedium herunterladen.",
+    "Download the setup script.": "Setupscript herunterladen",
     "Edit customer": "Kunden bearbeiten",
     "Edit device": "Gerät bearbeiten",
     "Edit group": "Gruppe bearbeiten",
@@ -52,67 +46,79 @@
     "Edit room": "Raum bearbeiten",
     "Edit user": "Benutzer bearbeiten",
     "Edit user preferences": "Benutzereinstellungen bearbeiten",
-    "Groups": "Gruppen",
+    "Error": "Fehlerbericht",
+    "FeatureRequest": "Featureanfrage",
+    "Feedback": "Rückmeldung (Lob)",
     "Group": "Gruppe",
-    "HWConfs": "Gerätekonfigurationen",
+    "Groups": "Gruppen",
     "HWConf": "Gerätekonfiguration",
-    "Import users":"Benutzerimporte",
-    "importFile": "Importdatei wählen",
+    "HWConfs": "Gerätekonfigurationen",
+    "Import users": "Benutzerimporte",
     "Installation sets": "Installationssets",
     "Installation status": "Status der Installationen",
     "Institutes": "Institute",
-    "List of old Imports":"Alte Imports",
+    "List of old Imports": "Alte Imports",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geärte verwalten",
+    "Manage devices in selected room": "Geärte verwalten. Raum:",
     "Manage groups": "Gruppen verwalten",
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
     "Manage institutes": "Instituten verwalten",
     "Manage rooms": "Räume verwalten",
     "Manage software installation sets:": "Installationssets verwalten",
-    "Manage users": "Benutzer verwalten",
     "Manage user imports": "Benutzerimporte verwalten",
-    "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
+    "Manage users": "Benutzer verwalten",
     "Member of groups:": "Mitglied der Gruppen:",
     "Members of the group:": "Mitglieder der Gruppe:",
+    "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
+    "Modify groups of selected user:":"Gruppenmitgliedschaft bearbeiten für:",
     "Modify members of selected group:": "Gruppenmitglieder bearbeiten:",
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
-    "Modify selecter group:":"Gruppe bearbeiten",
-    "Packages": "Pakete",
+    "Modify selecter group:": "Gruppe bearbeiten",
     "Package": "Paket",
-    "Please select at last one object!":"Bitte mindestens ein Objekt markieren!",
+    "Packages": "Pakete",
+    "Please select at last one object!": "Bitte mindestens ein Objekt markieren!",
+    "ProductOrder": "Bestellung",
     "Refresh package list.": "Paketliste aktualisieren.",
+    "Restart the server.": "Server neu starten.",
     "Room": "Raum",
     "Rooms": "Räume",
     "Select the columns to show": "Sichbare Felder auswählen.",
-    "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
-    "Update the server.":"Server aktualisieren.",
-    "Restart the server.":"Server neu starten.",
+    "Select the groups the user must be removed from.":"Gruppen markieren, aus denen der Benutzer entfernt werden soll.",
+    "Select the groups into  the user must be added.":"Gruppen markieren, in denen der Benutzer Mitgleid werden soll.",
+    "Select the users to remove from the group.":"Aus der Gruppe zu löschende Benutzer markieren!",
+    "Select the users to add to the group.":"Neue Mitglieder der Gruppe markieren!",
+    "Set the next default values": "Nächste Standardwerte eintragen.",
+    "Settings": "Einstellungen",
     "Shut down the server.": "Server herunterfahren",
+    "Start clone members of selected hwconf:": "Klonen starten für die Gerätekonfiguration:",
+    "System configuration": "Systemeinstellungen",
+    "This field is required!": "Dieses Feld muss ausgeüllt werden!",
+    "Update the server.": "Server aktualisieren.",
     "User": "Benutzer",
     "Users": "Benutzer",
+    "Write configuration and create installation image.": "Konfiugration schreiben und Installationsmedium erstellen.",
     "Write state files for the devices.": "Statefiles für die Geräte erstellen",
-    "Apply state for all running devices.": "Status auf alle laufende Geräte anwenden.",
-    "This field is required!":"Dieses Feld muss ausgeüllt werden!",
     "access": "Zugang",
     "address1": "Adresse",
     "address2": "Adressenzusatz",
     "adminPW": "Administratorpasswort",
     "administration": "Verwaltung",
-    "allClasses":"Importdatei enthält alle Klassen. Andere werden gelöscht.",
+    "allClasses": "Importdatei enthält alle Klassen. Andere werden gelöscht.",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
+    "appendBirthdayToPassword": "Geburtsdatum an Passwort anhängen.",
     "apply": "anwenden",
     "available members": "Nicht Mitglieder der Gruppe",
-    "appendBirthdayToPassword":"Geburtsdatum an Passwort anhängen.",
     "ayTemplate": "Installationsvorlage",
     "birthDay": "Geburtstag",
     "cancel": "verwerfen",
     "category": "Kategorie",
-    "cephalixPW": "Cephalixpasswort",
     "cephalixCustomerId": "Kunde",
+    "cephalixPW": "Cephalixpasswort",
     "class": "Klasse",
     "classes": "Klassen",
-    "cleanClassDirs":"Klassenverzeichnisse leeren",
+    "cleanClassDirs": "Klassenverzeichnisse leeren",
     "contact": "Kontaktperson",
     "country": "Land",
     "created": "erstellt",
@@ -122,32 +128,33 @@
     "description": "Beschreibung",
     "devCount": "Anzahl der Geräte",
     "device": "Gerät",
-    "devices": "Geräte",
     "deviceType": "Gerättyp",
+    "devices": "Geräte",
     "domain": "DNS-Domain",
     "edit": "bearbeiten",
-    "email":"Emailadresse",
+    "email": "Emailadresse",
     "firstRoom": "Erster Raum",
-    "firstname":"Vorname",
-    "full":"Importdatei enthält alle Benutzer.",
+    "firstname": "Vorname",
     "fsQuota": "Dateisystemquota",
     "fsQuotaUsed": "Dateisystembenutztung",
+    "full": "Importdatei enthält alle Benutzer.",
     "givenName": "Vorname",
-    "globalSchool":"Gesamtschule",
+    "globalSchool": "Gesamtschule",
     "group": "Gruppe",
-    "groups": "Gruppen",
     "groupType": "Art der Gruppe",
+    "groups": "Gruppen",
     "gwTrNet": "Standardroute in Transportnetz",
-    "gymnasium":"Gymnaisum",
-    "hwconfs": "Gerätekonfigurationen",
+    "gymnasium": "Gymnaisum",
     "hwconf": "Gerätekonfiguration",
     "hwconfId": "Gerätekonfiguration",
+    "hwconfs": "Gerätekonfigurationen",
     "id": "Technisches ID",
+    "importFile": "Importdatei wählen",
     "institute": "Institut",
-    "instituteType": "Art des Instituts",
     "instituteStatus": "Vertragsstatus",
+    "instituteType": "Art des Instituts",
+    "internalNetwork": "Internes Netzwerk",
     "invoiced": "abgerechnet",
-    "internalNetwork":"Internes Netzwerk",
     "ip": "IP-Adresse",
     "ipAdmin": "Haupt-IP-Adresse",
     "ipBackup": "IP des Backups ",
@@ -158,52 +165,53 @@
     "ipTrNet": "IP im Transportnetz",
     "ipVPN": "Verbindungs-IP (VPN)",
     "lang": "Sprache",
-    "lastname":"Nachname",
+    "lastname": "Nachname",
     "locality": "Ort/Adresse",
-    "login":"Anmelden",
+    "login": "Anmelden",
     "mac": "MAC-Adresse",
     "mailAliases": "E-Mail-Aliases",
     "members of the group": "Gruppenmitglieder",
-    "mustChange":"Passwort bei erster Anmeldung ändern",
     "msQuota": "Mailsystemquota",
     "msQuotaUsed": "Mailsystembenutzung",
+    "mustChange": "Passwort bei erster Anmeldung ändern",
     "name": "Name",
     "name2": "Namenzusatz",
     "network": "Netzwerk",
     "nmTrNet": "Netzwerkmaske im Transportnetz",
     "noticeType": "Art",
-    "other":"Andere Institution",
+    "other": "Andere Institution",
     "password": "Passwort",
     "place": "Platz",
     "places": "Plätze",
     "postalCode": "PLZ",
     "primary": "Primäre Gruppe (Rolle)",
-    "primarySchool":"Grundschule",
+    "primarySchool": "Grundschule",
     "prop": "",
-    "realSchool":"Realschule",
+    "realSchool": "Realschule",
     "recDate": "Erstell am:",
     "regCode": "Registrierungscode",
     "reminder": "Erinnerung",
     "resetPassword": "Passwörte für alte Benutzer auch setzten.",
     "role": "Rolle",
     "room": "Raum",
-    "rooms": "Räume",
-    "roomId": "Raum",
     "roomControl": "Kontrolle im Raum",
+    "roomId": "Raum",
     "roomType": "Art des Raumes",
+    "rooms": "Räume",
     "row": "Reihe",
     "rows": "Reihen",
     "search": "suchen",
-    "secondarySchool":"Mittel/Hauptschule",
-    "secondary_school":"Sekundarschule",
+    "secondarySchool": "Mittel/Hauptschule",
+    "secondary_school": "Sekundarschule",
     "serverNetwork": "Servernetz",
-    "softwares": "Software",
     "software": "Software",
-    "special":"Sonderschule",
-    "subject":"Betreff",
-    "status": "Status",
+    "softwares": "Software",
+    "special": "Sonderschule",
     "state": "Bundesland",
+    "status": "Status",
     "students": "Schüler",
+    "subject": "Betreff",
+    "supporttype": "Art der Supportanfrage",
     "surName": "Nachname",
     "sysadmins": "Systemadministratoren",
     "teachers": "Lehrer",
@@ -221,7 +229,7 @@
     "version": "Version",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
-    "workSchool":"Berufschule",
+    "workSchool": "Berufschule",
     "workTime": "Erfasste Arbeitszeit in Minuten",
     "workgroup": "Arbeitsgruppe"
 }
